--- a/index.html
+++ b/index.html
@@ -10,32 +10,22 @@
   </head>
   <body>
     <header>
-      <h1>Your name</h1>
+      <h1>Caden Mustoe</h1>
       <img src="profile.png" alt="me" />
     </header>
     <main>
       <section>
         <h2>About me</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          My name is Caden. I'm a proud husband and father of three wonderful girls.
+          I have many interests, including music, video games, and hot sauces.
+          I'm very interested in the world of computer science and am very excited to be
+          in CS260.
         </p>
         <p>
-          Cursus sit amet dictum sit amet justo donec enim. Volutpat blandit
-          aliquam etiam erat velit scelerisque. Vestibulum lorem sed risus
-          ultricies tristique nulla. Amet mattis vulputate enim nulla aliquet
-          porttitor. Tellus integer feugiat scelerisque varius morbi. Et tortor
-          at risus viverra adipiscing at in. Pellentesque habitant morbi
-          tristique senectus et. Donec ac odio tempor orci. At ultrices mi
-          tempus imperdiet nulla malesuada. Pellentesque pulvinar pellentesque
-          habitant morbi tristique senectus. Libero justo laoreet sit amet
-          cursus sit amet. Aliquet lectus proin nibh nisl condimentum. Sit amet
-          massa vitae tortor condimentum lacinia quis vel.
+          The project I am currently working on for this class is a game I'm calling Quintus.
+          It is a math game that I have played on paper for a long time, but I have always
+          wanted to make a program of it. I can't wait to show it off.
         </p>
         <p>
           Personalize this page to what you would like. This is your chance to
@@ -61,19 +51,19 @@
         <h3>HTML</h3>
         <ul>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/abKYRqN">Introduction</a>
+            <a href="https://codepen.io/Vigitant/pen/PoBgWOG">Introduction</a>
             - Basic HTML page example
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/GRGBqbw">Structure</a> -
+            <a href="https://codepen.io/Vigitant/pen/qBywPGM">Structure</a> -
             All the elements for creating page structure
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/dyVdNej">Input</a> - All
+            <a href="https://codepen.io/Vigitant/pen/JjBVQZV">Input</a> - All
             the elements for receiving user input
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/OJEwgBa">Media</a> - All
+            <a href="https://codepen.io/Vigitant/pen/VwBOoBK">Media</a> - All
             the elements for rendering media objects
           </li>
         </ul>
